--- a/src/main.css
+++ b/src/main.css
@@ -2,12 +2,12 @@ html,
 body {
   background-color: #121213;
   color: white;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
   font-size: 55px;
-  font-family:'Courier New', Courier, monospace;
+  font-family: 'Courier New', Courier, monospace;
   margin-top: .4em;
   margin-bottom: .1em;
 }
@@ -16,19 +16,39 @@ button {
   border-radius: 4px;
   border: 1px solid #848485;
   background-color: transparent;
-  margin-bottom: 2em;
+  margin-bottom: .5em;
   color: white;
-  font-size: 3em;
+  font-size: 2.2em;
   padding-left: 2.1em;
   padding-right: 2.1em;
   padding-top: .4em;
   padding-bottom: .4em;
   transition: background-color .4s cubic-bezier(0.075, 0.82, 0.165, 1);
-
 }
 
 button:hover {
   background-color: #272729;
+}
+
+hr {
+  border-color: #848485;
+  width: 55vw;
+  margin-bottom: 1em;
+}
+
+footer {
+  margin-bottom: 2em;
+  color: #e4e4e4;
+}
+
+a, a:visited {
+  text-decoration: underline;
+  color: #c0c0c0;
+  transition: color .1s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+a:hover {
+  color: #d9d9d9;
 }
 
 .row {
